# llama.cpp

./: LOCAL_AI_STUDIO.md
common/: arg.cpp  common.h
ggml/src/ggml-cuda/: ggml-cuda.cu
ggml/src/ggml-opencl/: ggml-opencl.cpp
ggml/src/ggml-sycl/: ggml-sycl.cpp
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
ggml/src/ggml-webgpu/: ggml-webgpu.cpp
tools/server/: CMakeLists.txt  local-ai-memory.cpp  local-ai-memory.h  server-context.cpp  server-context.h  server-http.cpp  server-models.cpp  server.cpp
